# acquire-driver-common

./: .gitignore  .gitmodules  .tokeignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  nightly-release.yml  nightly-tag.yml  release.yml  test_pr.yml
cmake/: aq_require.cmake  git-versioning.cmake
src/: CMakeLists.txt  basics.driver.c  identifiers.h
src/simcams/: CMakeLists.txt  bin2.avx2.c  bin2.plain.c  imfill.pattern.cpp  popcount.cpp  simulated.camera.c  simulated.camera.h
src/storage/: CMakeLists.txt  basic.storage.c  basic.storage.h  framecheck.c  raw.c  side-by-side-tiff.cpp  tiff.cpp  trash.c
tests/: CMakeLists.txt  list-devices.cpp  storage-get-meta.cpp  unit-tests.cpp
tests/devkit/: CMakeLists.txt  can-load-driver-interface.cpp  storage-get-meta.cpp
tests/integration/: CMakeLists.txt  abort-while-waiting-for-trigger.cpp  configure-triggering.cpp  list-digital-lines.cpp  software-trigger-acquires-single-frames.cpp
